2.1.0/_sources/gallery/text_labels_and_annotations/fancytextbox_demo.rst.txt


.. _sphx_glr_gallery_text_labels_and_annotations_fancytextbox_demo.py:


=================
Fancytextbox Demo
=================





.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_fancytextbox_demo_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt

    plt.text(0.6, 0.5, "test", size=50, rotation=30.,
             ha="center", va="center",
             bbox=dict(boxstyle="round",
                       ec=(1., 0.5, 0.5),
                       fc=(1., 0.8, 0.8),
                       )
             )

    plt.text(0.5, 0.4, "test", size=50, rotation=-30.,
             ha="right", va="top",
             bbox=dict(boxstyle="square",
                       ec=(1., 0.5, 0.5),
                       fc=(1., 0.8, 0.8),
                       )
             )


    plt.draw()
    plt.show()

**Total running time of the script:** ( 0 minutes  0.034 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: fancytextbox_demo.py <fancytextbox_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: fancytextbox_demo.ipynb <fancytextbox_demo.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
